--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,8 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "ts-node": "^10.4.0"
   },
   "dependencies": {
     "express": "^4.21.2"
